# bq-analista

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  INSTALL_CLAUDE_TEAM.md  PROMPT_INICIAL.md  README.md  SKILL.md  TEMPLATE.md  business-rules.md  dashboard_farm_ecomm.html  exec_template.py  index.html  middleware.js  msal-init.js  package-lock.json  pyproject.toml  schema.md  skills-lock.json  template-test-output.html  vercel.json
.github/workflows/: deploy-agents.yml  deploy-portal.yml
agents/vendas-linx/: Dockerfile  pyproject.toml  railway.toml
agents/vendas-linx/config/: allowed_execs.json  settings.toml
agents/vendas-linx/scripts/: entrypoint.sh
agents/vendas-linx/src/agent/: server.py
agents/vendas-linx/src/agent/context/: SKILL.md  business-rules.md  schema.md
agents/vendas-linx/tests/: test_consultar_bq.py  test_publicar_dashboard.py  test_server.py
api/: auth.js  share.js
docs/: dxt-release-checklist.md  release-dxt.md
mcp-server/: .dockerignore  .gitignore  Dockerfile  LOCAL.md  README.md  ROLLOUT.md  pyproject.toml  requirements.txt
mcp-server/config/: settings.example.toml
mcp-server/infra/: deploy.sh
mcp-server/infra/claude-team/: connector.md
mcp-server/infra/cloudflare/: README.md  config.yml.example
mcp-server/infra/launchd/: com.azzas.mcp.alerts.plist  com.azzas.mcp.plist  com.azzas.mcp.purge.plist
mcp-server/scripts/: entrypoint.sh  issue_long_lived_token.py  purge_audit.py  run-local-prod.sh
mcp-server/src/mcp_exec/: alerts.py  allowlist.py  audit.py  auth_middleware.py  auth_routes.py  bq_client.py  bridge.py  cli_login.py  context_loader.py  dev_server.py  jwt_tokens.py  library.py  sandbox.py  server.py  settings.py  sql_validator.py
mcp-server/tests/: test_alerts.py  test_allowlist.py  test_audit.py  test_auth_middleware.py  test_auth_routes.py  test_azure_auth.py  test_bq_client.py  test_cli_login.py  test_consultar_bq.py  test_context_loader.py  test_git_ops.py  test_jwt_tokens.py  test_library.py  test_listar_analises.py  test_publicar_dashboard.py  test_sandbox.py  test_settings.py  test_sql_validator.py
mcp-server/tests/integration/: test_end_to_end.md
portal/: admin.html  dicionario.html  index.html  middleware.js  msal-init.js  onboarding.html  package-lock.json  package.json  vercel.json
scripts/: health_check_fase_b.sh  new-agent.sh
(+144 files in other folders)
