[project]
name = "mcp-exec"
version = "0.1.0"
description = "MCP server for executive BigQuery dispatch at Azzas"
requires-python = ">=3.13"
dependencies = [
  "mcp>=1.2.0",
  "google-cloud-bigquery>=3.25",
  "google-auth>=2.34",
  "msal>=1.31",
  "PyJWT[crypto]>=2.9",
  "GitPython>=3.1",
  "pydantic>=2.9",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-mock>=3.14",
  "ruff>=0.6",
]

[project.scripts]
mcp-exec-server = "mcp_exec.server:main"
mcp-exec-dev = "mcp_exec.dev_server:dev_main"
mcp-login = "mcp_exec.cli_login:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
