[project]
name = "vendas-linx"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv.sources]
mcp-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
]
