[project]
name = "agent-vendas-linx"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["mcp-core"]

[project.scripts]
agent-server = "agent.server:main"

[tool.uv.sources]
mcp-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
